# cmp

./: Cargo.toml  LICENSE-APACHE  README.md
src/: api.rs  error.rs  lib.rs  main.rs
static/: 404.html  style.css
templates/: 404.html  bob.html  index.html  view.html
